--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <hr>
 
-  <h2>🧾 Dokumentacja</h2>
+  <h2>📄 Dokumentacja / Documentation / Documentatie</h2>
   <ul>
     <li><a href="TIMELINE.pl.md">Oś czasu (Timeline)</a></li>
     <li><a href="EVIDENCE_INDEX.pl.md">Spis dowodów (Evidence Index)</a></li>
@@ -61,6 +61,24 @@
     <li><a href="ANONYMIZATION.pl.md">Anonimizacja (Anonymization)</a></li>
     <li><a href="DISCLAIMER.pl.md">Zastrzeżenia (Disclaimer)</a></li>
   </ul>
+
+  <h3 id="en">English (EN)</h3>
+<ul>
+  <li><a href="TIMELINE.en.md">Timeline</a></li>
+  <li><a href="EVIDENCE_INDEX.en.md">Evidence Index</a></li>
+  <li><a href="ALLEGATIONS_AND_LAW.en.md">Allegations & Law</a></li>
+  <li><a href="ANONYMIZATION.en.md">Anonymization</a></li>
+  <li><a href="DISCLAIMER.en.md">Disclaimer</a></li>
+</ul>
+
+<h3 id="nl">Nederlands (NL)</h3>
+<ul>
+  <li><a href="TIMELINE.nl.md">Tijdlijn</a></li>
+  <li><a href="EVIDENCE_INDEX.nl.md">Bewijzenindex</a></li>
+  <li><a href="ALLEGATIONS_AND_LAW.nl.md">Beschuldigingen & Recht</a></li>
+  <li><a href="ANONYMIZATION.nl.md">Anonimisering</a></li>
+  <li><a href="DISCLAIMER.nl.md">Disclaimer</a></li>
+</ul>
 
   <hr>
 
