--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Open Graph / Social preview -->
+<meta property="og:title" content="Public Report – Intrixo B.V.">
+<meta property="og:description" content="Documented employment case with timeline and evidence. Languages: PL / EN / NL.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://damian545-dj.github.io/raport-publiczny/">
+<meta property="og:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
+
   <title>Raport Publiczny – Intrixo B.V.</title>
   <style>
     body {
