--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Open Graph / Social preview -->
+  <<!-- Open Graph / Social preview -->
 <meta property="og:title" content="Public Report – Intrixo B.V.">
 <meta property="og:description" content="Documented employment case with timeline and evidence. Languages: PL / EN / NL.">
 <meta property="og:type" content="website">
