--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <<!-- Open Graph / Social preview -->
-<meta property="og:title" content="Public Report – Intrixo B.V.">
-<meta property="og:description" content="Documented employment case with timeline and evidence. Languages: PL / EN / NL.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://damian545-dj.github.io/raport-publiczny/">
-<meta property="og:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
+  <!-- Open Graph / Social preview -->
+  <meta property="og:title" content="Public Report – Intrixo B.V. (PL/EN/NL)">
+  <meta property="og:description" content="Anonymized public evidence report with timeline and evidence index. Languages: PL / EN / NL.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://damian545-dj.github.io/raport-publiczny/">
+  <meta property="og:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
-  <title>Raport Publiczny – Intrixo B.V.</title>
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
+
+  <title>Public Report – Intrixo B.V. (PL/EN/NL)</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -23,80 +25,137 @@
       color: #24292e;
       margin: 40px;
       line-height: 1.6;
+      max-width: 980px;
     }
-    h1 {
-      color: #0059b3;
+    h1 { color: #0059b3; margin-bottom: 10px; }
+    h2 { margin-top: 28px; }
+    .muted { color: #57606a; }
+    .box {
+      background: #ffffff;
+      border: 1px solid #d0d7de;
+      border-radius: 10px;
+      padding: 18px 18px;
+      margin: 18px 0;
     }
     a {
       color: #0366d6;
       text-decoration: none;
       font-weight: bold;
     }
-    a:hover {
-      text-decoration: underline;
+    a:hover { text-decoration: underline; }
+    ul { list-style-type: none; padding-left: 0; margin: 0; }
+    li { margin-bottom: 10px; }
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 12px;
     }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
+    @media (min-width: 720px) {
+      .grid { grid-template-columns: 1fr 1fr; }
     }
-    li {
-      margin-bottom: 10px;
+    .hr {
+      border: none;
+      border-top: 1px solid #d0d7de;
+      margin: 24px 0;
     }
     footer {
-      margin-top: 40px;
+      margin-top: 28px;
       font-size: 0.9em;
-      color: #555;
+      color: #57606a;
+    }
+    .badge {
+      display: inline-block;
+      padding: 3px 8px;
+      border: 1px solid #d0d7de;
+      border-radius: 999px;
+      font-size: 12px;
+      color: #57606a;
+      margin-right: 6px;
+      background: #fff;
     }
   </style>
 </head>
+
 <body>
-  <h1>🌍 Raport Publiczny (Public Report)</h1>
-  <p>
-    Anonimowy raport dotyczący sprawy pracowniczej z agencją Intrixo B.V.<br>
-    Ta wersja publiczna zawiera zanonimizowane dowody, dokumenty i oś czasu.
+  <h1>🌍 Public Evidence Report (PL / EN / NL)</h1>
+  <p class="muted">
+    An anonymized public report about an employment-related case involving Intrixo B.V. (formerly Voorneputten).
+    This public version contains only anonymized descriptions, structured documentation and indexes.
   </p>
 
-  <h2>📘 Wybierz wersję językową / Choose language / Kies taal</h2>
-  <ul>
-    <li>🇵🇱 <a href="README.pl.md">Polski (PL)</a></li>
-    <li>🇬🇧 <a href="README.en.md">English (EN)</a></li>
-    <li>🇳🇱 <a href="README.nl.md">Nederlands (NL)</a></li>
-  </ul>
+  <div class="box">
+    <span class="badge">Privacy</span>
+    <span class="badge">Anonymized</span>
+    <span class="badge">Public</span>
+    <p style="margin-top:10px;">
+      Sensitive materials (audio/video and full documents with personal data) are <b>not</b> published publicly.
+      They can be provided to institutions, legal representatives or media upon a justified request.
+    </p>
+  </div>
 
-  <hr>
+  <div class="box">
+    <h2>📘 Choose language / Wybierz język / Kies taal</h2>
+    <ul>
+      <li>🇵🇱 <a href="README.pl.md">Polski (PL)</a></li>
+      <li>🇬🇧 <a href="README.en.md">English (EN)</a></li>
+      <li>🇳🇱 <a href="README.nl.md">Nederlands (NL)</a></li>
+    </ul>
+  </div>
 
-  <h2>📄 Dokumentacja / Documentation / Documentatie</h2>
-  <ul>
-    <li><a href="TIMELINE.pl.md">Oś czasu (Timeline)</a></li>
-    <li><a href="EVIDENCE_INDEX.pl.md">Spis dowodów (Evidence Index)</a></li>
-    <li><a href="ALLEGATIONS_AND_LAW.pl.md">Zarzuty i prawo (Allegations & Law)</a></li>
-    <li><a href="ANONYMIZATION.pl.md">Anonimizacja (Anonymization)</a></li>
-    <li><a href="DISCLAIMER.pl.md">Zastrzeżenia (Disclaimer)</a></li>
-  </ul>
+  <hr class="hr">
 
-  <h3 id="en">English (EN)</h3>
-<ul>
-  <li><a href="TIMELINE.en.md">Timeline</a></li>
-  <li><a href="EVIDENCE_INDEX.en.md">Evidence Index</a></li>
-  <li><a href="ALLEGATIONS_AND_LAW.en.md">Allegations & Law</a></li>
-  <li><a href="ANONYMIZATION.en.md">Anonymization</a></li>
-  <li><a href="DISCLAIMER.en.md">Disclaimer</a></li>
-</ul>
+  <h2>📄 Documentation / Dokumentacja / Documentatie</h2>
+  <div class="grid">
+    <div class="box">
+      <h3 style="margin-top:0;">🇵🇱 Polski</h3>
+      <ul>
+        <li><a href="TIMELINE.pl.md">Oś czasu (Timeline)</a></li>
+        <li><a href="EVIDENCE_INDEX.pl.md">Spis dowodów (Evidence Index)</a></li>
+        <li><a href="ALLEGATIONS_AND_LAW.pl.md">Zarzuty i prawo (Allegations &amp; Law)</a></li>
+        <li><a href="ANONYMIZATION.pl.md">Anonimizacja (Anonymization)</a></li>
+        <li><a href="DISCLAIMER.pl.md">Zastrzeżenia (Disclaimer)</a></li>
+        <li><a href="CONTRIBUTING.pl.md">Jak pomóc (Contributing)</a></li>
+      </ul>
+    </div>
 
-<h3 id="nl">Nederlands (NL)</h3>
-<ul>
-  <li><a href="TIMELINE.nl.md">Tijdlijn</a></li>
-  <li><a href="EVIDENCE_INDEX.nl.md">Bewijzenindex</a></li>
-  <li><a href="ALLEGATIONS_AND_LAW.nl.md">Beschuldigingen & Recht</a></li>
-  <li><a href="ANONYMIZATION.nl.md">Anonimisering</a></li>
-  <li><a href="DISCLAIMER.nl.md">Disclaimer</a></li>
-</ul>
+    <div class="box">
+      <h3 style="margin-top:0;">🇬🇧 English</h3>
+      <ul>
+        <li><a href="TIMELINE.en.md">Timeline</a></li>
+        <li><a href="EVIDENCE_INDEX.en.md">Evidence Index</a></li>
+        <li><a href="ALLEGATIONS_AND_LAW.en.md">Allegations &amp; Law</a></li>
+        <li><a href="ANONYMIZATION.en.md">Anonymization</a></li>
+        <li><a href="DISCLAIMER.en.md">Disclaimer</a></li>
+        <li><a href="CONTRIBUTING.en.md">Contributing</a></li>
+      </ul>
+    </div>
 
-  <hr>
+    <div class="box">
+      <h3 style="margin-top:0;">🇳🇱 Nederlands</h3>
+      <ul>
+        <li><a href="TIMELINE.nl.md">Tijdlijn</a></li>
+        <li><a href="EVIDENCE_INDEX.nl.md">Bewijzenindex</a></li>
+        <li><a href="ALLEGATIONS_AND_LAW.nl.md">Beschuldigingen &amp; Recht</a></li>
+        <li><a href="ANONYMIZATION.nl.md">Anonimisering</a></li>
+        <li><a href="DISCLAIMER.nl.md">Disclaimer</a></li>
+        <li><a href="CONTRIBUTING.nl.md">Bijdragen (Contributing)</a></li>
+      </ul>
+    </div>
+
+    <div class="box">
+      <h3 style="margin-top:0;">📌 Repository</h3>
+      <ul>
+        <li><a href="https://github.com/Damian545-DJ/raport-publiczny">GitHub repository</a></li>
+      </ul>
+      <p class="muted" style="margin-top:10px;">
+        If any link above shows 404, the filename in the repository differs (case-sensitive). Match file names exactly.
+      </p>
+    </div>
+  </div>
 
   <footer>
     &copy; 2026 – Public Evidence Report (Intrixo B.V.) |
-    <a href="https://github.com/Damian545-DJ/raport-publiczny">Repozytorium GitHub</a>
+    <a href="https://github.com/Damian545-DJ/raport-publiczny">GitHub</a>
   </footer>
 </body>
 </html>
