--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
     </p>
   </div>
 
+ <div class="box">
+    <span class="badge">Updates</span>
+    <p style="margin-top:10px;">
+      <b>Updates:</b> this page will be regularly updated with case progress (responses from institutions, letters, decisions, and key changes).
+      <br>
+      <b>Last updated:</b> 2026-01-25
+    </p>
+  </div> 
+
   <div class="box">
     <h2>📘 Choose language / Wybierz język / Kies taal</h2>
     <ul>
