--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
       <b>Updates:</b> this page will be regularly updated with case progress (responses from institutions, letters, decisions, and key changes).
       <br>
       <b>Last updated:</b> 2026-01-25
+       <br>
+      <b>Updates log:</b> <a href="UPDATES.md">UPDATES.md</a>
     </p>
   </div> 
 
