--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
   <meta property="og:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta name="description" content="Anonymized public evidence report with timeline and evidence index. Languages: PL / EN / NL.">
+
+<meta property="og:site_name" content="Public Evidence Report">
+<meta property="og:image:alt" content="Public Evidence Report – Intrixo B.V. (PL/EN/NL)">
+
+<meta name="twitter:title" content="Public Report – Intrixo B.V. (PL/EN/NL)">
+<meta name="twitter:description" content="Anonymized public evidence report with timeline and evidence index. Languages: PL / EN / NL.">
+
+
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://damian545-dj.github.io/raport-publiczny/assets/og-image-en.png">
+  <meta name="twitter:image:alt" content="Public Evidence Report – Intrixo B.V. (PL/EN/NL)">
+
 
   <title>Public Report – Intrixo B.V. (PL/EN/NL)</title>
 
