--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <br>
       <b>Last updated:</b> 2026-01-25
        <br>
-      <b>Updates log:</b> <a href="UPDATES.md">UPDATES.md</a>
+      <b>Updates log:</b> <a href="https://github.com/Damian545-DJ/raport-publiczny/blob/main/UPDATES.md">UPDATES.md</a>
     </p>
   </div> 
 
