--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
       <br>
       <b>Last updated:</b> 2026-01-25
        <br>
-      <b>Updates log:</b> <a href="UPDATES.md">UPDATES.md</a>
+      <b>Updates log:</b> <a href="doc.html?file=UPDATES.md">UPDATES.md</a>
     </p>
   </div> 
 
   <div class="box">
     <h2>📘 Choose language / Wybierz język / Kies taal</h2>
     <ul>
-      <li>🇵🇱 <a href="README.pl.md">Polski (PL)</a></li>
-      <li>🇬🇧 <a href="README.en.md">English (EN)</a></li>
-      <li>🇳🇱 <a href="README.nl.md">Nederlands (NL)</a></li>
+      <li>PL <a href="doc.html?file=README.pl.md">Polski (PL)</a></li>
+      <li>GB <a href="doc.html?file=README.en.md">English (EN)</a></li>
+      <li>NL <a href="doc.html?file=README.nl.md">Nederlands (NL)</a></li>
     </ul>
   </div>
 
@@ -131,36 +131,36 @@
     <div class="box">
       <h3 style="margin-top:0;">🇵🇱 Polski</h3>
       <ul>
-        <li><a href="TIMELINE.pl.md">Oś czasu (Timeline)</a></li>
-        <li><a href="EVIDENCE_INDEX.pl.md">Spis dowodów (Evidence Index)</a></li>
-        <li><a href="ALLEGATIONS_AND_LAW.pl.md">Zarzuty i prawo (Allegations &amp; Law)</a></li>
-        <li><a href="ANONYMIZATION.pl.md">Anonimizacja (Anonymization)</a></li>
-        <li><a href="DISCLAIMER.pl.md">Zastrzeżenia (Disclaimer)</a></li>
-        <li><a href="CONTRIBUTING.pl.md">Jak pomóc (Contributing)</a></li>
+        <li><a href="doc.html?file=TIMELINE.pl.md">Oś czasu (Timeline)</a></li>
+        <li><a href="doc.html?file=EVIDENCE_INDEX.pl.md">Spis dowodów (Evidence Index)</a></li>
+        <li><a href="doc.html?file=ALLEGATIONS_AND_LAW.pl.md">Zarzuty i prawo (Allegations &amp; Law)</a></li>
+        <li><a href="doc.html?file=ANONYMIZATION.pl.md">Anonimizacja (Anonymization)</a></li>
+        <li><a href="doc.html?file=DISCLAIMER.pl.md">Zastrzeżenia (Disclaimer)</a></li>
+        <li><a href="doc.html?file=CONTRIBUTING.pl.md">Jak pomóc (Contributing)</a></li>
       </ul>
     </div>
 
     <div class="box">
       <h3 style="margin-top:0;">🇬🇧 English</h3>
       <ul>
-        <li><a href="TIMELINE.en.md">Timeline</a></li>
-        <li><a href="EVIDENCE_INDEX.en.md">Evidence Index</a></li>
-        <li><a href="ALLEGATIONS_AND_LAW.en.md">Allegations &amp; Law</a></li>
-        <li><a href="ANONYMIZATION.en.md">Anonymization</a></li>
-        <li><a href="DISCLAIMER.en.md">Disclaimer</a></li>
-        <li><a href="CONTRIBUTING.en.md">Contributing</a></li>
+        <li><a href="doc.html?file=TIMELINE.en.md">Timeline</a></li>
+        <li><a href="doc.html?file=EVIDENCE_INDEX.en.md">Evidence Index</a></li>
+        <li><a href="doc.html?file=ALLEGATIONS_AND_LAW.en.md">Allegations &amp; Law</a></li>
+        <li><a href="doc.html?file=ANONYMIZATION.en.md">Anonymization</a></li>
+        <li><a href="doc.html?file=DISCLAIMER.en.md">Disclaimer</a></li>
+        <li><a href="doc.html?file=CONTRIBUTING.en.md">Contributing</a></li>
       </ul>
     </div>
 
     <div class="box">
       <h3 style="margin-top:0;">🇳🇱 Nederlands</h3>
       <ul>
-        <li><a href="TIMELINE.nl.md">Tijdlijn</a></li>
-        <li><a href="EVIDENCE_INDEX.nl.md">Bewijzenindex</a></li>
-        <li><a href="ALLEGATIONS_AND_LAW.nl.md">Beschuldigingen &amp; Recht</a></li>
-        <li><a href="ANONYMIZATION.nl.md">Anonimisering</a></li>
-        <li><a href="DISCLAIMER.nl.md">Disclaimer</a></li>
-        <li><a href="CONTRIBUTING.nl.md">Bijdragen (Contributing)</a></li>
+        <li><a href="doc.html?file=TIMELINE.nl.md">Tijdlijn</a></li>
+        <li><a href="doc.html?file=EVIDENCE_INDEX.nl.md">Bewijzenindex</a></li>
+        <li><a href="doc.html?file=ALLEGATIONS_AND_LAW.nl.md">Beschuldigingen &amp; Recht</a></li>
+        <li><a href="doc.html?file=ANONYMIZATION.nl.md">Anonimisering</a></li>
+        <li><a href="doc.html?file=DISCLAIMER.nl.md">Disclaimer</a></li>
+        <li><a href="doc.html?file=CONTRIBUTING.nl.md">Bijdragen</a></li>
       </ul>
     </div>
 
