--- a/doc.html
+++ b/doc.html
@@ -3,46 +3,50 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark" />
   <title>Document</title>
 
-  <!-- GitHub Markdown style -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.5.1/github-markdown.min.css"
-  />
+  <!-- GitHub-like markdown styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.5.1/github-markdown.min.css">
 
   <style>
-    body {
-      margin: 0;
+    :root { color-scheme: light dark; }
+
+    body { margin: 0; }
+    .wrap { max-width: 980px; margin: 0 auto; padding: 24px; }
+    .top { display: flex; gap: 12px; align-items: center; margin-bottom: 16px; flex-wrap: wrap; }
+    .btn { text-decoration: none; border: 1px solid #d0d7de; padding: 8px 12px; border-radius: 10px; color: #111; background: #fff; }
+    .small { color: #666; font-size: 13px; }
+
+    /* Container for markdown */
+    .md {
+      border: 1px solid #d0d7de;
+      border-radius: 14px;
+      padding: 18px;
       background: #fff;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-    }
-    .wrap {
-      max-width: 980px;
-      margin: 0 auto;
-      padding: 24px;
-    }
-    .top {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      margin-bottom: 16px;
-      flex-wrap: wrap;
-    }
-    .btn {
-      text-decoration: none;
-      border: 1px solid #ddd;
-      padding: 8px 12px;
-      border-radius: 10px;
       color: #111;
+      box-shadow: 0 1px 2px rgba(0,0,0,.06);
     }
-    .small {
-      color: #666;
-      font-size: 13px;
-    }
-    .markdown-body {
-      background: #fff;
+
+    /* Make code blocks readable */
+    .md pre { padding: 12px; border-radius: 10px; overflow: auto; }
+    .md code { border-radius: 6px; padding: 0.15em 0.35em; }
+
+    /* DARK mode */
+    @media (prefers-color-scheme: dark) {
+      body { background: #0d1117; color: #c9d1d9; }
+      .btn { border-color: #30363d; color: #c9d1d9; background: #161b22; }
+      .small { color: #8b949e; }
+
+      .md {
+        border-color: #30363d;
+        background: #0d1117;
+        color: #c9d1d9;
+        box-shadow: none;
+      }
+      .md a { color: #58a6ff; }
+      .md pre { background: #161b22; }
+      .md code { background: rgba(110,118,129,.2); }
     }
   </style>
 </head>
@@ -54,29 +58,81 @@
       <span class="small" id="fileName"></span>
     </div>
 
-    <article id="content" class="markdown-body"></article>
+    <article class="markdown-body md" id="content">Ładuję…</article>
   </div>
 
+  <!-- Markdown renderer -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const file = params.get("file");
 
-    if (!file) {
-      document.getElementById("content").innerHTML =
-        "<p>Brak pliku do wyświetlenia.</p>";
-    } else {
-      document.getElementById("fileName").textContent = file;
-      fetch(file)
-        .then((r) => r.text())
-        .then((md) => {
-          document.getElementById("content").innerHTML = marked.parse(md);
-        })
-        .catch(() => {
-          document.getElementById("content").innerHTML =
-            "<p>Nie można załadować pliku.</p>";
-        });
+  <script>
+    function safeFileName(name) {
+      // allow only simple relative names, block ".."
+      if (!name) return null;
+      if (name.includes("..")) return null;
+      // allow letters, numbers, underscore, dash, dot, slash
+      if (!/^[a-zA-Z0-9._\-\/]+$/.test(name)) return null;
+      return name;
     }
+
+    function toDocLinkIfMd(href) {
+      // convert relative *.md links into doc.html?file=...
+      if (!href) return href;
+      const isExternal = /^https?:\/\//i.test(href);
+      if (isExternal) return href;
+
+      // anchors like #section should stay
+      if (href.startsWith("#")) return href;
+
+      if (href.toLowerCase().endsWith(".md")) {
+        return "doc.html?file=" + encodeURIComponent(href);
+      }
+      return href;
+    }
+
+    async function load() {
+      const params = new URLSearchParams(location.search);
+      const raw = params.get("file") || "README.pl.md";
+      const file = safeFileName(raw);
+
+      const fileNameEl = document.getElementById("fileName");
+      const contentEl = document.getElementById("content");
+
+      if (!file) {
+        fileNameEl.textContent = "Błędna nazwa pliku w ?file=";
+        contentEl.textContent = "Podaj poprawnie np. doc.html?file=README.pl.md";
+        return;
+      }
+
+      fileNameEl.textContent = file;
+      document.title = file;
+
+      try {
+        const res = await fetch(file, { cache: "no-store" });
+        if (!res.ok) throw new Error("HTTP " + res.status);
+
+        const md = await res.text();
+        contentEl.innerHTML = marked.parse(md);
+
+        // Fix links
+        const links = contentEl.querySelectorAll("a[href]");
+        links.forEach(a => {
+          const oldHref = a.getAttribute("href");
+          const newHref = toDocLinkIfMd(oldHref);
+          a.setAttribute("href", newHref);
+
+          // external links open new tab
+          if (/^https?:\/\//i.test(newHref)) {
+            a.setAttribute("target", "_blank");
+            a.setAttribute("rel", "noopener noreferrer");
+          }
+        });
+
+      } catch (e) {
+        contentEl.textContent = "Nie mogę wczytać pliku: " + file + " (" + e.message + ")";
+      }
+    }
+
+    load();
   </script>
 </body>
 </html>
